# GB-homework

./: BlackJackDaniels.cpp  OOP 5.cpp  ООП 1.cpp  ООП 2.cpp  ООП 3.cpp  ООП 4.cpp  ООП 6.cpp  ООП 7.cpp  ООП 8.cpp
2 урок дз/: 2 урок дз.sln  2 урок дз.vcxproj
BlackJackDaniels/: BlackJackDaniels.cpp  BlackJackDaniels.sln  BlackJackDaniels.vcxproj  BlackJackDaniels.vcxproj.filters
Hard 1/: Hard 1.cpp  Hard 1.sln  Hard 1.vcxproj  Hard 1.vcxproj.filters  Phones.txt
Hard 2/: Hard 2.cpp  Hard 2.sln  Hard 2.vcxproj  Hard 2.vcxproj.filters
Hard 4/: Hard 4.cpp  Hard 4.sln  Hard 4.vcxproj  Hard 4.vcxproj.filters
Hard 5/: Hard 5.cpp  Hard 5.sln  Hard 5.vcxproj  Hard 5.vcxproj.filters
Hard 6/: Hard 6.cpp  Hard 6.sln  Hard 6.vcxproj  Hard 6.vcxproj.filters
Hard 8/: Hard 8.cpp  Hard 8.sln  Hard 8.vcxproj  Hard 8.vcxproj.filters  Phones.txt  hard_1.cpp
Hard_3/: Hard_3.cpp  Hard_3.sln  Hard_3.vcxproj  Hard_3.vcxproj.filters
Hard_7/: CMakeLists.txt  Hard_7.cpp  Hard_7.sln  Hard_7.vcxproj  Hard_7.vcxproj.filters  StudentsGroup.h  class.pb.cc  class.pb.h  class.proto
Крестики и нолики/: Крестики и нолики.cpp  Крестики и нолики.vcxproj  Крестики и нолики.vcxproj.filters
Урок 4 ПЗ/: Урок 4 ПЗ.cpp  Урок 4 ПЗ.vcxproj  Урок 4 ПЗ.vcxproj.filters
Урок 5 ПЗ/: Урок 5 ПЗ.cpp  Урок 5 ПЗ.vcxproj  Урок 5 ПЗ.vcxproj.filters
Урок 6 ПЗ/: Урок 6 ПЗ.cpp  Урок 6 ПЗ.vcxproj  Урок 6 ПЗ.vcxproj.filters
Урок 7 ПЗ/: HW7.txt  mylib.cpp  mylib.h  Урок 7 ПЗ.cpp  Урок 7 ПЗ.vcxproj  Урок 7 ПЗ.vcxproj.filters
урок 3 ПЗ/: ext.cpp  урок 3 ПЗ.cpp  урок 3 ПЗ.vcxproj  урок 3 ПЗ.vcxproj.filters
(+183 files in other folders)
